Seperating out CSS and images so views are independent.

--- a/views/shub_sensor_readings_directory/shub_sensor_readings_directory.css
+++ b/views/shub_sensor_readings_directory/shub_sensor_readings_directory.css
@@ -1,4 +1,4 @@
 /**
  * Menu icon ==========================================================
  */
-#features-menu li a.icon-sensor-readings-directory span.icon { background:url(images/icon.png) no-repeat; }
+#features-menu li a.icon-sensor-readings span.icon { background:url(images/icon.png) no-repeat; }
